--- a/templates/register.html
+++ b/templates/register.html
@@ -3,16 +3,18 @@
 {{define "content"}}
     <h1>Register</h1>
     {{if .error}}
-        <div class="error">{{.error}}</div>
+        <div style="color: red; margin-bottom: 15px;">
+            {{.error}}
+        </div>
     {{end}}
     <form method="POST" action="/register">
         <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
+            <label>Username:</label>
+            <input type="text" name="username" required>
         </div>
         <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
+            <label>Password:</label>
+            <input type="password" name="password" required>
         </div>
         <button type="submit">Register</button>
     </form>
