--- a/templates/register.html
+++ b/templates/register.html
@@ -1,22 +1,8 @@
-{{template "base.html" .}}
-
-{{define "content"}}
-    <h1>Register</h1>
-    {{if .error}}
-        <div style="color: red; margin-bottom: 15px;">
-            {{.error}}
-        </div>
-    {{end}}
-    <form method="POST" action="/register">
-        <div>
-            <label>Username:</label>
-            <input type="text" name="username" required>
-        </div>
-        <div>
-            <label>Password:</label>
-            <input type="password" name="password" required>
-        </div>
-        <button type="submit">Register</button>
-    </form>
-    <p>Already have an account? <a href="/login">Login here</a></p>
-{{end}}
+<h1>Регистрация</h1>
+{{if .Error}}<p style="color:red">{{.Error}}</p>{{end}}
+<form method="POST">
+    <input name="username" placeholder="Логин">
+    <input name="password" type="password" placeholder="Пароль">
+    <button>Зарегистрироваться</button>
+</form>
+<a href="/login">Уже есть аккаунт? Войти</a>
