--- a/templates/login.html
+++ b/templates/login.html
@@ -167,7 +167,7 @@
 <body>
     <header>
         <div class="header-container">
-            <div class="logo">MyBlog</div>
+            <div class="logo">Travel Blog</div>
             <nav>
                 <ul>
                     <li><a href="/">Главная</a></li>
