--- a/templates/profile.html
+++ b/templates/profile.html
@@ -189,11 +189,10 @@
 <body>
     <header>
         <div class="header-container">
-            <div class="logo">MyBlog</div>
+            <div class="logo">Travel Blog</div>
             <nav>
                 <ul>
                     <li><a href="/">Главная</a></li>
-                    <li><a href="/profile">Профиль</a></li>
                     <li><a href="/logout">Выйти</a></li>
                 </ul>
             </nav>
